COMMERCE-2514 fixed alignment on side panel close button

--- a/commerce-frontend-js/src/main/resources/META-INF/resources/components/side_panel/_side_panel.scss
+++ b/commerce-frontend-js/src/main/resources/META-INF/resources/components/side_panel/_side_panel.scss
@@ -19,7 +19,7 @@
     opacity: .5;
     
     &-simple {
-      top: 27px;
+      top: 29px;
       right: 20px;
       opacity: 1;
     }
